# django

./: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
digisig/: apps.py  forms.py  models.py  urls.py  views.py
digisig/static/css/: style.css
digisig/static/digisig/: style.css
digisig/static/geojson/: UKDefinition.json  UKDefinitionA(1).json  UKDefinitionA.json
digisig/static/js/: main.js  rtidisplay.js
digisig/static/ml/: ml_faceobjectset  ml_timegroups.txt  ml_tree  ml_tree_plot  ml_tree_text.txt
digisig/static/openlime/: examples.css
digisig/templates/digisig/: about.html  actor.html  analysis_date.html  analysis_time.html  base.html  change.html  collection.html  contact.html  contributors.html  exhibit.html  help.html  index.html  item.html  machinelearning.html  map.html  place.html  representation.html  seal.html  sealdescription.html  search_actor.html  search_item.html  search_place.html  search_seal.html  search_sealdescription.html  term.html  terminology.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
mysite/: settings.py  urls.py
render/: apps.py  views.py
render/templates/render/: index.html
sealquery/: asgi.py  settings.py  urls.py  virtualhostmiddleware.py  wsgi.py
utils/: generaltools.py  mltools.py  viewtools.py
witness/: apps.py  forms.py  models.py  urls.py  views.py
witness/static/css/: style_witness.css
witness/templates/witness/: base.html  graph.html  index.html  item.html  parish - Copy.html  parish.html  parish_graph.html  people.html  (+6 more)
(+25 files in other folders)
